# Viki

./: .gitmodules  CMakeLists.txt  README.md  viki.cpp
shaders/: triangle.frag.glsl  triangle.vert.glsl
src/: CMakeLists.txt  viki.cpp
src/shaders/: triangle.frag.glsl  triangle.vert.glsl
